--- a/Rewardpoint/Web.config
+++ b/Rewardpoint/Web.config
@@ -10,7 +10,10 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=aspnet-Rewardpoint-20180503081741;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-         providerName="System.Data.SqlClient" />
+      providerName="System.Data.SqlClient" />
+    <add name="aspnet-RewardPoints-20180503074710ConnectionString"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=aspnet-RewardPoints-20180503074710;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
